package Departments

type Department struct {
	DepartmentID uint16 `json:"DepartmentID"`
	Code         string `json:"Code"`
	Name         string `json:"Name"`
}
