@startuml
namespace Curriculum {
    class Curriculum << (S,Aquamarine) >> {
        + CurriculumID uint16
        + CurriculumName string
        + CurriculumCode string
        + DepartmentID uint16
        + YearLevels []YearLevel

    }
    class Semester << (S,Aquamarine) >> {
        + Name string
        + Sections int
        + Subjects []Subject

    }
    class Subject << (S,Aquamarine) >> {
        + ID uint16
        + Code string
        + Name string
        + LecHours uint8
        + LabHours uint8
        + BitFlags uint16
        + DesignatedInstructors []uint16

        + Serialize() uint32
        + Deserialize(serialized_data uint32) 
        + IsGymType() bool

    }
    class YearLevel << (S,Aquamarine) >> {
        + Name string
        + IsActive bool
        + Semesters []Semester

    }
}


"Curriculum.Curriculum""uses" o-- "Curriculum.YearLevel"
"Curriculum.Semester""uses" o-- "Curriculum.Subject"
"Curriculum.YearLevel""uses" o-- "Curriculum.Semester"

namespace Departments {
    class Department << (S,Aquamarine) >> {
        + DepartmentID uint16
        + Code string
        + Name string

    }
}



namespace GeneticAlgorithm {
    class ScheduleIndex << (S,Aquamarine) >> {
        + DepartmentID uint16
        + CurriculumID uint16
        + YearLevel uint8
        + Section uint8

    }
    class Totals << (S,Aquamarine) >> {
        + DepartmentID uint16
        + SectionCount int
        + LecRoomHours int
        + LabRoomHours int
        + GymRoomHours int
        + InstructorHours float64
        + InstructorCount int
        + SubjectLecHours int
        + SubjectLabHours int
        + SubjectGymHours int
        + RoomCapacity int
        + RoomLabCount int
        + RoomLecCount int
        + Semester int
        + DepartmentName string
        + Courses int
        + LecSubjectCount int
        + LabSubjectCount int

    }
}



namespace Instructors {
    class Instructor << (S,Aquamarine) >> {
        + InstructorID uint16
        + DepartmentID uint16
        + FirstName string
        + MiddleInitial string
        + LastName string
        + AssignedSubjects int
        + TotalTeachingHours int
        + AvailableDay uint8
        + Time InstructorTimeSlotBitMap

    }
    class InstructorTimeSlotBitMap << (S,Aquamarine) >> {
        + SetAvailability(available bool, day int, time_slot int) 
        + GetAvailability(day int, time_slot int) bool

    }
    class Instructors.InstructorTimeSlotBitMap << (T, #FF7700) >>  {
    }
}


"Instructors.Instructor""uses" o-- "Instructors.InstructorTimeSlotBitMap"

namespace Rooms {
    class Room << (S,Aquamarine) >> {
        - timeSlotClassCount []uint8

        + RoomID uint16
        + DepartmentID uint16
        + Capacity uint16
        + RoomType uint16
        + Name string

        + SetTimeSlotClassCount(day int, time_slot int, class_count uint8) 
        + IncTimeSlotClassCount(day int, time_slot int) 
        + GetTimeSlotClassCount(day int, time_slot int) uint8

    }
}



namespace RouteGlobals {
    class scheduleCache << (S,Aquamarine) >> {
        - rw_mutex sync.RWMutex
        - semester_schedule []Schedule.UniTimeTables

    }
}


"RouteGlobals.scheduleCache""uses" o-- "Schedule.UniTimeTables"
"RouteGlobals.scheduleCache""uses" o-- "sync.RWMutex"

namespace RoutesV1 {
    class CurriculumMicroData << (S,Aquamarine) >> {
        + CurriculumID uint16
        + CurriculumName string
        + CurriculumCode string
        + YearLevels []YearLevelMicroData

    }
    class DepartmentData << (S,Aquamarine) >> {
        + Curriculums []CurriculumMicroData

    }
    class SubjectAssignmentInfo << (S,Aquamarine) >> {
        + SubjectCode string
        + InstructorLastName string
        + RoomName string
        + DayIdx uint8
        + TimeSlotIdx uint8
        + SubjectTimeSlots uint8

    }
    class YearLevelMicroData << (S,Aquamarine) >> {
        + Name string
        + SectionsUniversityScheduleIndex []int

    }
}


"RoutesV1.CurriculumMicroData""uses" o-- "RoutesV1.YearLevelMicroData"
"RoutesV1.DepartmentData""uses" o-- "RoutesV1.CurriculumMicroData"

namespace Schedule {
    class DayTimeTable << (S,Aquamarine) >> {
        + GetTimeSlot(time_slot_idx int) *TimeSlot
        + IsTimeAvailable(time_slot_idx int, time_slot_size int) bool

    }
    class Schedule.DayTimeTable << (T, #FF7700) >>  {
    }
    class Schedule.UniTimeTables << (T, #FF7700) >>  {
    }
    class Schedule.WeekTimeTable << (T, #FF7700) >>  {
    }
    class TimeSlot << (S,Aquamarine) >> {
        - subjectID uint16
        - instructorID uint16
        - roomID uint16

        + Set(subject_id uint16, instructor_id uint16, room_id uint16) error
        + CopyWithoutFlags() TimeSlot
        + GetSubjectID() uint16
        + GetInstructorID() uint16
        + GetRoomID() uint16
        + SetSubjectID(subject_id uint16) error
        + SetInstructorID(instructor_id uint16) error
        + SetRoomID(room_id uint16) error
        + IsConstSubjectID() bool
        + IsConstInstructorID() bool
        + IsConstRoomID() bool
        + ToggleCFlagSubjectID() 
        + ToggleCFlagInstructorID() 
        + ToggleCFlagRoomID() 

    }
    class UniInstructorValidationError << (S,Aquamarine) >> {
        + Msg string
        + Day int
        + TimeSlot int
        + InstructorID uint16
        + OverlappingSections []uint16

    }
    class UniRoomValidationError << (S,Aquamarine) >> {
        + Msg string
        + Day int
        + TimeSlot int
        + RooomID uint16
        + OverlappingSections []uint16

    }
    class UniTimeTables << (S,Aquamarine) >> {
        + GetWeekTimeTable(class_section_idx int) *WeekTimeTable
        + IsEmpty() bool
        + Validate(resource_persistence *StorageResources.Persistence) []error

    }
    class WeekTimeTable << (S,Aquamarine) >> {
        + GetDayTimeTable(day_idx int) *DayTimeTable

    }
    class roomCountAndCapacity << (S,Aquamarine) >> {
        + OverlappingSections []uint16
        + Capacity uint16

    }
}



namespace StorageResources {
    class JsonReader << (S,Aquamarine) >> {
        + GetAllRooms() ([]Rooms.Room, error)
        + GetAllInstructors() ([]Instructors.Instructor, error)
        + GetAllCurriculum() ([]Curriculum.Curriculum, error)
        + GetAllSubjects() ([]Curriculum.Subject, error)
        + GetAllDepartments() ([]Departments.Department, error)

    }
    class Persistence << (S,Aquamarine) >> {
        + ReaderService readerRepository

    }
    interface readerRepository  {
        + GetAllCurriculum() ([]Curriculum.Curriculum, error)
        + GetAllSubjects() ([]Curriculum.Subject, error)
        + GetAllDepartments() ([]Departments.Department, error)
        + GetAllInstructors() ([]Instructors.Instructor, error)
        + GetAllRooms() ([]Rooms.Room, error)

    }
}

"StorageResources.readerRepository" <|-- "implements""StorageResources.JsonReader"

"StorageResources.Persistence""uses" o-- "StorageResources.readerRepository"

namespace StorageSchedule {
    class JsonReader << (S,Aquamarine) >> {
        + LoadSchedules(semester int) (Schedule.UniTimeTables, error)

    }
    class JsonWriter << (S,Aquamarine) >> {
        + SaveSchedules(university_schedule Schedule.UniTimeTables, semester int) error

    }
    class Persistence << (S,Aquamarine) >> {
        + ReaderService readerRepository
        + WriterService writerRepository

    }
    interface readerRepository  {
        + LoadSchedules(semester int) (Schedule.UniTimeTables, error)

    }
    interface writerRepository  {
        + SaveSchedules(university_schedule Schedule.UniTimeTables, semester int) error

    }
}

"StorageSchedule.readerRepository" <|-- "implements""StorageSchedule.JsonReader"
"StorageSchedule.writerRepository" <|-- "implements""StorageSchedule.JsonWriter"

"StorageSchedule.Persistence""uses" o-- "StorageSchedule.readerRepository"
"StorageSchedule.Persistence""uses" o-- "StorageSchedule.writerRepository"

"Schedule.[]DayTimeTable" #.. "alias of""Schedule.WeekTimeTable"
"Schedule.[]TimeSlot" #.. "alias of""Schedule.DayTimeTable"
"Schedule.[]WeekTimeTable" #.. "alias of""Schedule.UniTimeTables"
"__builtin__.[]uint64" #.. "alias of""Instructors.InstructorTimeSlotBitMap"
@enduml
